--- a/index.html
+++ b/index.html
@@ -9,10 +9,14 @@
 </head>
 
 <body>
-    <div id="heroesContainer">
-        <input type="text" id="heroName" placeholder="Имя героя">
-        <input type="text" id="heroClass" placeholder="Класс героя">
-        <input id="submit" type="submit" value="Добавить героя">
+    <div class="con">
+    <div id="heroesContainer"></div>
+
+        <div id="formContainer">
+            <input type="text" id="heroName" placeholder="Имя героя">
+            <input type="text" id="heroClass" placeholder="Класс героя">
+            <input id="submit" type="submit" value="Добавить героя">
+        </div>
     </div>
 </body>
 <script src="script.js"></script>
